768 adaptive start footer 320

--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -47,8 +47,28 @@
             </div>
             <div class="logo_text">Жалюзи и ролеты от производителя за 1 день</div>
         </div>
+        <div class="footer_item footer_mob_item">
+            <a href="tel:+38080012356" class="footer_item_phone">
+                <div class="footer_item_icon">
+                    <img src="../../assets/img/svg/Phone.svg" alt="" class="svg">
+
+                </div>
+                <div class="footer_item_text">0 800 123 560</div>
+            </a>
+            <div class="footer_item_office">
+                <div class="footer_item_text_s">Главный офис компании</div>
+                <div class="footer_item_phone footer_item_office_text">
+                    <div class="footer_item_icon">
+                        <img src="../../assets/img/svg/Adress.svg" alt="" class="svg">
+                    </div>
+                    <div class="footer_item_text">г. Харьков,
+                        пр-т Московский, 129а
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="footer_top_right">
-            <div class="button_all text_bold_s">
+            <div class="button_all text_bold_s constructor_button">
                 Онлайн конструктор
             </div>
             <div class="help_footer">
@@ -191,13 +211,13 @@
                     <div class="footer_item_text_s">Мы в соц. сетях</div>
                     <div class="footer_item_grid">
                         <a href="#" target="_blank" class="footer_link">
-                            <img src="../../assets/img/svg/Istagram.svg" alt="">
+                            <img src="../../assets/img/svg/Istagram.svg" alt="" class="svg">
                         </a>
                         <a href="#" target="_blank" class="footer_link">
-                            <img src="../../assets/img/svg/Fasebook.svg" alt="">
+                            <img src="../../assets/img/svg/Fasebook.svg" alt="" class="svg">
                         </a>
                         <a href="#" target="_blank" class="footer_link">
-                            <img src="../../assets/img/svg/Youtube.svg" alt="">
+                            <img src="../../assets/img/svg/Youtube.svg" alt="" class="svg">
                         </a>
                     </div>
                 </div>
@@ -208,8 +228,11 @@
                     <button class="button_all button_director">Написать руководителю</button>
                 </div>
             </div>
-            <div class="footer_item">
-                <a href="#" class="footer_item_list_text">Помощь покупателям</a>
+            <div class="footer_item accordion_mob_footer">
+                <div class="accordion_footer">
+                    <a href="#" class="footer_item_list_text">Помощь покупателям</a>
+                    <i class="dropdown icon"></i>
+                </div>
                 <ul class="footer_item_list">
                     <li><a href="#">
                             О компании
@@ -706,6 +729,7 @@ basket_total">Итого:
         <div class="popup_search">
             <div class="ui icon search input search_header_b">
                 <i class="search icon"></i>
+                <i class="close icon"></i>
                 <input type="text" placeholder="Поиск по сайту ">
             </div>
             <div class="result_container">
