--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -147,7 +147,7 @@
                 </li>
             </ul>
         </div>
-        <div class="button_all text_bold_s">
+        <div class="button_all text_bold_s constructor_button">
             Онлайн конструктор
         </div>
         <div class="icon_container">
@@ -321,6 +321,7 @@
     </div>
 </div>
 <div class="header_fixed">
+
     <div class="catalog_header">
         <div class="btn_block">
             <img src="../../assets/img/svg/btn.svg" alt="">
@@ -330,12 +331,22 @@
 
     </div>
     <div class="header_info">
+        <div class="logo_image">
+            <img src="../../assets/img/logo.svg" alt="">
+        </div>
+        <div class="phone_popup_header icon_all">
+            <div class="phone_popup_text">
+                0 800 123 560
+            </div>
+            <i class="dropdown icon"></i>
+        </div>
         <div class="buyer_popup_header icon_all">
             <div class="phone_popup_text">
                 Покупателям
             </div>
             <i class="dropdown icon"></i>
         </div>
+
         <div class="ui custom popup popup_all buyer_popup">
             <ul class="buyer_popup_link">
                 <li>
@@ -370,7 +381,7 @@
                 </li>
             </ul>
         </div>
-        <div class="button_all text_bold_s">
+        <div class="button_all text_bold_s constructor_button">
             Онлайн конструктор
         </div>
         <div class="ui icon search input search_header_b popup_click_search">
@@ -405,56 +416,127 @@
         </div>
     </div>
     <div class="header_menu_catalog">
+        <div class="mob_catalog">
+            <div class="language_mob">
+                <a href="#" class="active">Рус</a>
+                <a href="#">Укр</a>
+            </div>
+            <div class="city_button">
+                <div class="city_button_text">Город:</div>
+                <div class="ui custom button">Ивано-Франковск</div>
+            </div>
+            <div class="button_all text_bold_s constructor_button">
+                Онлайн конструктор
+            </div>
+        </div>
         <div class="menu_list_catalog">
             <ul class="menu_catalog_grid">
+                <li class="buyer_list">
+                    <div class="link_menu">
+                        <a href="#">Покупателям</a>
+                    </div>
+                    <ul></ul>
+                </li>
                 <li>
-                    <a href="#">Жалюзи</a>
+                    <div class="link_menu">
+                        <a href="#">Жалюзи</a>
+                    </div>
                     <ul class="menu_hover_catalog">
-                        <li ><a href="#">Горизонтальные жалюзи</a>
+                        <li>
+                            <div class="link_menu">
+                                <div class="link_menu">
+                                    <a href="#">Горизонтальные жалюзи</a>
+                                </div>
+                            </div>
                             <ul class="menu_catalog_last">
                                 <li>
-                                    <a href="#">Пластиковые 89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Пластиковые 89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Тканевые 127/89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Тканевые 127/89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Мультифактурные 89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Мультифактурные 89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Нитяные 89 мм. </a>
+                                    <div class="link_menu">
+                                        <a href="#">Нитяные 89 мм. </a>
+                                    </div>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#">Вертикальные жалюзи</a></li>
-                        <li><a href="#">Жалюзи по назначению</a></li>
+                        <li>
+                            <div class="link_menu">
+                                <a href="#">Вертикальные жалюзи</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="link_menu">
+                                <a href="#">Жалюзи по назначению</a>
+                            </div>
+                        </li>
                     </ul>
                 </li>
-                <li><a href="#">Тканевые ролеты</a>
+                <li>
+                    <div class="link_menu">
+                        <a href="#">Тканевые ролеты</a>
+                    </div>
                     <ul class="menu_hover_catalog">
-                        <li ><a href="#">Горизонтальные жалюзи2</a>
+                        <li>
+                            <div class="link_menu">
+                                <a href="#">Горизонтальные жалюзи2</a>
+                            </div>
                             <ul class="menu_catalog_last">
                                 <li>
-                                    <a href="#">Пластиковые 89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Пластиковые 89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Тканевые 127/89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Тканевые 127/89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Мультифактурные 89 мм.</a>
+                                    <div class="link_menu">
+                                        <a href="#">Мультифактурные 89 мм.</a>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">Нитяные 89 мм. </a>
+                                    <div class="link_menu">
+                                        <a href="#">Нитяные 89 мм. </a>
+                                    </div>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#">Вертикальные жалюзи</a></li>
-                        <li><a href="#">Жалюзи по назначению</a></li>
+                        <li>
+                            <div class="link_menu">
+                                <a href="#">Вертикальные жалюзи</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="link_menu">
+                                <a href="#">Жалюзи по назначению</a>
+                            </div>
+                        </li>
                     </ul>
                 </li>
-                <li><a href="#">Римские шторы</a></li>
-                <li><a href="#">Рулонные шторы</a></li>
-                <li><a href="#">Жалюзи День-Ночь</a></li>
+                <li>
+                    <div class="link_menu">
+                        <a href="#">Римские шторы</a></div>
+                </li>
+                <li>
+                    <div class="link_menu"><a href="#">Рулонные шторы</a></div>
+                </li>
+                <li>
+                    <div class="link_menu"><a href="#">Жалюзи День-Ночь</a></div>
+                </li>
             </ul>
             <a href="#" class="menu_list_catalog_img">
                 <img src="../../assets/img/Rectangle148.png" alt="">
