--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -445,6 +445,110 @@
                         </div>
                     </div>
                 </div>
+                <div class="product_slider_mob">
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle15.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Жалюзи для ванной
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle16.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Жалюзи для кухни
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle18.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Римские шторы в гостинную
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle15.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Жалюзи для ванной
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle16.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Жалюзи для кухни
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product_items_list">
+                        <div class="product_items_img">
+                            <img src="../../assets/img/Rectangle18.png" alt="">
+                        </div>
+                        <div class="product_items_container">
+                            <div class="product_items_title text_bold_s">
+                                Римские шторы в гостинную
+                            </div>
+                            <div class="product_items_price text_bold_s">
+                                Цена от 210 грн.
+                            </div>
+                            <p>Две строки текста где будет что-то сказано про жалюзи </p>
+                            <a href="#" class="image_arrow button_icon">
+                                <img src="../../assets/img/svg/Arrow_button.svg " alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="slider_number_container">
                     <div class="button_prev button_slider">
                         <img src="../../assets/img/svg/Arrow_button.svg" alt="" class="svg">
@@ -500,6 +604,33 @@
                         <div class="manufacturer_item_text">Мы работаем согласно удобству для Вас. Мастера приезжают в
                             удобное для Вас время и день недели. Заранее и предварительно соглавываем со специалистами.
                         </div>
+                    </div>
+                </div>
+                <div class="manufacturer_mob">
+                    <div class="video_container">
+                        <div class="button_video_content button_icon_video">
+                            <div class="button_video">
+                                <img src="../../assets/img/svg/button_video.svg " alt="" class="svg">
+                            </div>
+                        </div>
+                        <video id='video' controls="controls" preload='none' width="100%"
+                               poster="../../assets/img/Rectangle19.png">
+                            <source id='mp4' src="http://media.w3.org/2010/05/sintel/trailer.mp4" type='video/mp4'/>
+                            <source id='webm' src="http://media.w3.org/2010/05/sintel/trailer.webm" type='video/webm'/>
+                            <source id='ogv' src="http://media.w3.org/2010/05/sintel/trailer.ogv" type='video/ogg'/>
+                        </video>
+                    </div>
+                    <div class="button_video_content">
+                        <p>Смотреть видео
+                            про наше производство</p>
+                        <span>Это займёт 02:15</span>
+                    </div>
+                    <div class="video_content">
+                        <p>Компания ARTTEX была основана в 2008 году и на сегодняшний день является одним из ведущих
+                            производителей солнцезащитных систем Украины. Начиная производство с обычных вертикальных
+                            жалюзи, за 7 лет компания сделала большой шаг вперед и теперь в ассортимент предлагаемой
+                            продукции входят такие позиции как: горизонтальные алюминиевые жалюзи, система Venus,
+                            горизонтальные деревянные жалюзи, горизонтальные пластиковые жалюзи, тканевые</p>
                     </div>
                 </div>
             </div>
@@ -649,70 +780,70 @@
                     </div>
                 </div>
                 <div class="container_map_right">
-                     <select class="ui fluid  dropdown representative_select">
-                         <option value="KH">Харьков</option>
-                         <option value="KV">Киев</option>
-                     </select>
-                     <div class="representative_text">
-                         Название представительситва может в две строки
-                     </div>
-                     <div class="button_services">
-                         Предоставляемые услуги
-                     </div>
-                     <ul class="representative_list_info">
-                         <li>
-                             <div class="representative_icon">
-                                 <img src="../../assets/img/svg/employee.svg" alt="">
-                             </div>
-                             <div class="representative_right">
-                                 <div class="representative_right_text">В этом городе есть монтажная бригада</div>
-                             </div>
-                         </li>
-                         <li>
-                             <div class="representative_icon representative_icon_color">
-                                 <img src="../../assets/img/svg/Adress.svg" alt="" class="svg">
-                             </div>
-                             <div class="representative_right">
-                                 <div class="representative_right_text">г. Харьков, пр-т Московский, 129а</div>
-                                 <div class="click_map">Проложить машрут</div>
-                             </div>
-                         </li>
-                         <li>
-                             <div class="representative_icon representative_icon_color">
-                                 <img src="../../assets/img/svg/Phone.svg" alt="" class="svg">
-                             </div>
-                             <div class="representative_right">
-                                 <a href="tel:+380501328457
+                    <select class="ui fluid  dropdown representative_select">
+                        <option value="KH">Харьков</option>
+                        <option value="KV">Киев</option>
+                    </select>
+                    <div class="representative_text">
+                        Название представительситва может в две строки
+                    </div>
+                    <div class="button_services">
+                        Предоставляемые услуги
+                    </div>
+                    <ul class="representative_list_info">
+                        <li>
+                            <div class="representative_icon">
+                                <img src="../../assets/img/svg/employee.svg" alt="">
+                            </div>
+                            <div class="representative_right">
+                                <div class="representative_right_text">В этом городе есть монтажная бригада</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="representative_icon representative_icon_color">
+                                <img src="../../assets/img/svg/Adress.svg" alt="" class="svg">
+                            </div>
+                            <div class="representative_right">
+                                <div class="representative_right_text">г. Харьков, пр-т Московский, 129а</div>
+                                <div class="click_map">Проложить машрут</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="representative_icon representative_icon_color">
+                                <img src="../../assets/img/svg/Phone.svg" alt="" class="svg">
+                            </div>
+                            <div class="representative_right">
+                                <a href="tel:+380501328457
  " class="representative_right_text">(050) 132-84-57
-                                 </a>
-                             </div>
-                         </li>
-                         <li>
-                             <div class="representative_icon representative_icon_color">
-                                 <img src="../../assets/img/svg/Email.svg" alt="" class="svg">
-                             </div>
-                             <div class="representative_right">
-                                 <a href="mailto:arttexoffice@gmail.com
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="representative_icon representative_icon_color">
+                                <img src="../../assets/img/svg/Email.svg" alt="" class="svg">
+                            </div>
+                            <div class="representative_right">
+                                <a href="mailto:arttexoffice@gmail.com
  " class="representative_right_text">arttexoffice@gmail.com
-                                 </a>
-                             </div>
-                         </li>
-                         <li>
-                             <div class="representative_icon representative_icon_color">
-                                 <img src="../../assets/img/svg/clock.svg" alt="" class="svg">
-                             </div>
-                             <div class="representative_right">
-                                 <div class="clock_map">
-                                     Пн-Пт: <span>09:00 - 17:00</span>
-                                     <br>
-                                     Сб-Вс: <span>Выходной</span>
-                                 </div>
-                             </div>
-                         </li>
-                     </ul>
-                 </div>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="representative_icon representative_icon_color">
+                                <img src="../../assets/img/svg/clock.svg" alt="" class="svg">
+                            </div>
+                            <div class="representative_right">
+                                <div class="clock_map">
+                                    Пн-Пт: <span>09:00 - 17:00</span>
+                                    <br>
+                                    Сб-Вс: <span>Выходной</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
 
-              <!--  <div class="container_map_right">
+                <!--  <div class="container_map_right">
                     <select class="ui fluid  dropdown representative_select">
                         <option value="KH">Харьков</option>
                         <option value="KV">Киев</option>
@@ -720,8 +851,8 @@
                     <div class="container_manager">
                         <div class="manager_row">
                             <div class="manager_img">
-                               {#<div class="manager_status offline">
-                                </div>#}
+                               {# <div class="manager_status offline">
+                                </div> #}
                                 <div class="manager_status online">
                                 </div>
                                 <img src="../../assets/img/Ellipse69.png" alt="">
