--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -197,15 +197,19 @@ header {
   }
 
   &:hover {
+
     .phone_help_popup {
       opacity: 1;
+      pointer-events: auto;
     }
 
   }
 }
 
 .phone_help_popup {
+  pointer-events: none;
   opacity: 0;
+  z-index: 12;
   transition: .5s all;
   position: absolute;
   background: white;
@@ -457,7 +461,9 @@ header {
 
 
 }
-
+.phone_help_popup_header{
+  z-index: 13;
+}
 .basket_items_close {
   width: 40px;
   height: 40px;
@@ -604,6 +610,11 @@ i.icon.close:before {
 
 .ui.input.search_city {
   input {
+    &::placeholder {
+      font-size: 14px;
+      color: #4E4A65;
+    }
+
     border-radius: 0;
     border: 1px solid #4E4A65;
     padding: 18px 16px;
@@ -630,6 +641,7 @@ i.icon.close:before {
 
 .ui.popup.city_popup {
   max-width: 372px;
+  width: 100%;
   padding: 32px;
   box-shadow: none;
   border-radius: 0;
@@ -1088,6 +1100,18 @@ a:hover {
   margin-top: 24px
 }
 
+.link_menu {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  i.icon {
+    margin: 0;
+    transform: rotate(-90deg);
+  }
+}
+
 .container_cost {
   display: grid;
   grid-template-columns: .8fr 1fr;
@@ -1203,6 +1227,8 @@ a:hover {
 
 .button_all_result {
   background: #4E4A65;
+  align-items: center;
+  justify-content: center;
   padding: 20px 39px;
   display: flex;
 }
@@ -1511,6 +1537,12 @@ a:hover {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 64px;
+
+  span {
+    background: #4E4A65;
+    color: white;
+    padding: 2px 4px;
+  }
 }
 
 .button_icon {
@@ -2979,9 +3011,31 @@ footer.container_all {
   object-fit: cover;
 }
 
+.footer_mob_item,
+.mob_catalog,
+.buyer_list,
+.manufacturer_mob,
+.product_slider_mob {
+  display: none;
+}
+.accordion_footer {
+  i {
+    display: none;
+  }
+}
+.header_fixed {
+  .phone_popup_header,
+  .logo_image {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 1800px) {
   .home .slick-slide img {
     height: 520px;
+  }
+  .idea {
+    padding-top: 160px;
   }
   .idea_slider_items img {
     height: 450px;
@@ -3457,6 +3511,11 @@ footer.container_all {
   .product_items_container p {
     font-size: 14px;
     line-height: 24px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .buyer_help_grid .product_items_container {
     padding: 32px 32px 64px;
@@ -3593,9 +3652,11 @@ footer.container_all {
     width: 100%;
     max-width: 299px;
   }
+
   .product_slider_container .slider_number_container {
     width: 100%;
     max-width: 316px;
+    justify-content: center;
     right: 24px;
     bottom: 82px;
   }
@@ -3683,6 +3744,733 @@ footer.container_all {
   }
 }
 
-@media screen and (max-width: 1340px) {
+@media screen and (max-width: 1275px) {
 
+  @mixin fontsize($property) {
+    font-size: $property;
+    line-height: $property;
+  }
+  .menu_list_catalog ul li.active {
+    background: transparent !important;
+  }
+  .popup_search .close {
+    filter: invert(1);
+    top: 6px !important;
+  }
+  .menu_list_catalog ul ul.menu_catalog_last li {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+
+  .language_mob {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-gap: 24px;
+
+    a {
+      &.active {
+        font-weight: bold;
+      }
+    }
+  }
+  .menu_list_catalog ul ul.menu_hover_catalog {
+    padding-left: 20px !important;
+    padding-right: 0;
+  }
+  .mob_catalog {
+    display: block;
+
+    .city_button {
+      margin: 48px 0;
+      display: grid;
+      grid-template-columns: max-content max-content;
+      grid-gap: 5px;
+    }
+
+    .constructor_button {
+      margin-bottom: 32px;
+    }
+
+  }
+  .menu_hover_catalog > li > .link_menu > a {
+    text-transform: uppercase;
+  }
+  .popup_search {
+    max-width: 648px;
+    left: 50% !important;
+    transform: translate(-50%, 0%);
+  }
+  .menu_catalog_grid {
+    display: grid;
+    grid-gap: 32px;
+
+    .ui.accordion {
+      .dropdown.icon {
+        transform: rotate(90deg);
+        margin: 0;
+      }
+
+      .accordion .active.title .dropdown.icon, .active.title .dropdown.icon {
+        transform: rotate(-90deg);
+      }
+
+      .accordion .title .dropdown.icon {
+        margin: 0;
+        transform: rotate(90deg);
+      }
+
+      .title ~ .content:not(.ui) {
+        padding: 0;
+      }
+
+      .title:not(.ui) {
+        text-transform: uppercase;
+      }
+
+      .accordion {
+        margin: 0;
+      }
+
+      .active.content {
+        display: grid;
+      }
+
+      .title {
+        font-size: 14px;
+        line-height: 14px;
+      }
+    }
+
+    .buyer_list a {
+      text-transform: capitalize !important;
+    }
+
+    > li > .link_menu > a {
+      text-transform: uppercase;
+    }
+
+    ul {
+      width: auto;
+      margin-top: 32px;
+      grid-gap: 32px;
+    }
+
+  }
+  .menu_catalog_last {
+    padding: 0 !important;
+  }
+  .menu_list_catalog ul.menu_catalog_grid li.arrow > a:before {
+    transform: rotate(0deg);
+  }
+  .menu_list_catalog ul li {
+    padding: 0;
+  }
+
+
+  .menu_list_catalog ul ul {
+    position: relative;
+    transform: none;
+  }
+  .product_slider {
+    display: none;
+  }
+  .video_container {
+    position: relative;
+  }
+  .video_content {
+    margin-top: 64px;
+
+    p {
+      font-size: 14px;
+      line-height: 24px;
+    }
+  }
+  .manufacturer_grid {
+    margin-bottom: 120px;
+  }
+  .manufacturer_item_title {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .manufacturer_mob {
+    > .button_video_content {
+      max-width: 100%;
+
+      p {
+        white-space: initial;
+      }
+    }
+
+    display: block;
+
+    #video {
+      height: 404px;
+      object-fit: cover;
+    }
+
+    .button_icon_video {
+      background: linear-gradient(0deg, rgba(7, 2, 27, 0.4), rgba(7, 2, 27, 0.4));
+      max-width: 100%;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      circle {
+        stroke: white;
+      }
+
+      path {
+        fill: white;
+      }
+
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  .manufacturer_img {
+    display: none;
+  }
+  .manufacturer_grid {
+    margin-left: 0;
+    grid-gap: 64px;
+    padding-bottom: 0;
+  }
+  .manufacturer_text {
+    font-size: 40px;
+    line-height: 48px;
+    margin-bottom: 80px;
+  }
+
+  .idea {
+    padding-top: 120px;
+  }
+  .container_idea {
+    .button_video_content {
+      display: none;
+    }
+  }
+  .idea_portfolio_img img {
+    max-width: 290px;
+    height: 350px;
+  }
+  .slider_idea_container .slider_number_container {
+    position: relative;
+    justify-content: space-between;
+    max-width: 100%;
+    width: 100%;
+    padding: 16px 0;
+  }
+  .slider_idea_container_text {
+    left: -28px;
+    font-size: 32px;
+    line-height: 32px;
+    padding: 32px 32px 32px 28px;
+    z-index: 1;
+  }
+  .info_home {
+    .button_close {
+      margin-left: 24px;
+    }
+  }
+  .buyer_list {
+    display: block;
+  }
+  .accordion_info_home .content p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-top: 24px;
+  }
+  .footer_top_right {
+    grid-gap: 24px;
+  }
+  .footer_item_list {
+    margin-bottom: 0;
+  }
+  .header_menu_catalog {
+    padding: 48px 28px;
+    max-width: 372px;
+  }
+  .copyright {
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 80px;
+  }
+  .menu_list_catalog:before,
+  .menu_list_catalog_img {
+    display: none;
+  }
+  .footer_container > div:nth-child(3) > *:last-child {
+    margin-bottom: 0;
+  }
+  .footer_container > div:nth-child(3) > ul:nth-child(2) {
+    margin-bottom: 64px;
+  }
+  .copyright_text {
+    margin-top: 40px;
+  }
+  .footer_container {
+    display: grid;
+    grid-template-columns: minmax(0, 281px ) max-content;
+    justify-content: flex-start;
+    grid-gap: 87px;
+  }
+  footer.container_all {
+    padding-bottom: 24px;
+    padding-top: 50px;
+    grid-gap: 87px;
+  }
+  .footer_top_right .button_header,
+  .footer_top_right .help_footer {
+    padding: 16px 24px;
+  }
+  .footer_top_left {
+    margin-bottom: 40px;
+  }
+  .footer_top.container_all {
+    flex-direction: column;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .container_info_item {
+    grid-gap: 16px;
+  }
+  .container_info_column_text_b {
+    max-width: 244px;
+    color: #4E4A65;
+  }
+  .container_all.container_info {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 64px;
+    background: white;
+  }
+  .container_all.container_idea {
+    grid-template-columns: minmax(0, 1fr) max-content;
+    padding-bottom: 120px;
+  }
+  .idea_slider_items img {
+    height: 274px;
+  }
+  .idea::before {
+    max-width: 580px;
+  }
+  .idea_portfolio_link {
+    padding: 16px;
+    max-width: 282px;
+    @include fontsize(14px);
+    margin-bottom: -32px;
+
+    .button_icon {
+      width: 32px;
+      height: 32px;
+    }
+  }
+  .buyer_help,
+  .manufacturer,
+  .product.container_all {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .container_all.buyer_help_container {
+    padding: 0 28px;
+  }
+  .buyer_help_left_text {
+    @include fontsize(48px);
+    margin-bottom: 80px;
+  }
+  .buyer_help {
+    padding-bottom: 0;
+  }
+  .buyer_help_grid .product_items_container p {
+    display: block;
+    overflow: initial;
+  }
+  .buyer_help::before {
+    display: none;
+  }
+  .buyer_help_img {
+    display: none;
+  }
+
+  .container_all.manufacturer_container {
+    padding: 0 28px !important;
+  }
+  .manufacturer:before {
+    z-index: -1;
+    content: " ";
+    right: 0;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: white;
+    max-width: 100%;
+  }
+  .product_slider_container .slider_number_container {
+    position: relative;
+    bottom: auto;
+    top: auto;
+    left: auto;
+    right: auto;
+    margin: 40px auto 0;
+  }
+  .container_all {
+    padding: 0 28px;
+  }
+  .product_text {
+    position: relative;
+    margin-bottom: 40px;
+    max-width: 100%;
+  }
+
+  .product_slider_mob {
+    .product_items_container {
+      padding: 16px 16px 62px;
+      height: 170px;
+
+      .product_items_price {
+        margin-bottom: 12px;
+      }
+
+      .product_items_container p {
+        line-height: 20px;
+      }
+    }
+
+    margin: 0px -12px;
+    margin-right: -28px;
+
+    .slick-list {
+      padding-right: 190px;
+    }
+
+    .product_items_list {
+      margin: 12px;
+    }
+
+    display: block;
+
+    .product_items_img {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        height: 232px;
+        object-fit: cover;
+      }
+    }
+
+    .product_items_container {
+      display: block;
+    }
+  }
+  .home_slider_container {
+    height: calc(761px - 57px);
+    margin-bottom: 64px;
+    padding-bottom: 0;
+    background: white;
+
+    .slider_number_container {
+      bottom: -64px;
+      background: #EBEBED;
+      right: 0;
+    }
+
+  }
+
+  .home {
+    max-height: inherit;
+    background: #EBEBED;
+    padding: 0;
+  }
+  .header_bottom,
+  header {
+    display: none;
+  }
+
+  .container_home {
+    padding-top: 56px;
+  }
+  .home_left {
+    max-width: 472px;
+    background: white;
+    padding: 28px 28px 40px;
+    bottom: -64px;
+    left: 0;
+  }
+  .home_left_title_b {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 40px;
+  }
+  .home_left_title_t {
+    @include fontsize(48px);
+    margin-bottom: 16px;
+  }
+  .home_left_text {
+    margin-bottom: 48px;
+    width: calc(100vw - 28px - 28px);
+    max-width: initial;
+  }
+  .home_left_container {
+    left: auto;
+    padding: 0;
+  }
+  .home_slider {
+    padding: 28px 28px 0;
+  }
+
+  .home .slick-slide img {
+    height: 378px;
+  }
+  .home_slider {
+    max-width: 100%;
+  }
+  .catalog_header {
+    padding: 20px 20px;
+  }
+  .header_fixed {
+    border: none;
+
+    .basket_button {
+      display: flex;
+      align-items: center;
+      padding: 19px 20px;
+    }
+
+    .button_header {
+      padding: 21px 24px;
+      font-size: 14px;
+      line-height: 14px;
+    }
+
+    .ui.search_header_b.popup_click_search {
+      width: max-content;
+
+      &.ui.icon.input > i.icon {
+        position: relative;
+        top: auto;
+        transform: none;
+        background: url(../assets/img/svg/Search_black.svg) no-repeat center;
+      }
+    }
+
+    .popup_click_search input {
+      display: none;
+    }
+
+    .btn_block {
+      margin-right: 0;
+    }
+
+    .catalog_header_text {
+      display: none;
+    }
+
+    .header_info {
+      background: #EBEBED;
+      padding: 12px 24px;
+
+      .buyer_popup_header,
+      .constructor_button {
+        display: none;
+      }
+
+    }
+
+    .logo_image {
+      display: block;
+      padding: 0;
+      background: transparent;
+    }
+  }
+  .header_info {
+    .phone_popup_header {
+      &.icon_all.active .icon {
+        transform: none;
+      }
+
+      padding: 0;
+
+      .phone_popup_text {
+        display: none;
+      }
+
+      .dropdown.icon {
+        background: url(../assets/img/svg/Phone_black.svg);
+        width: 16px;
+        height: 16px;
+        top: 0;
+        position: relative;
+      }
+    }
+
+
+    .city_button,
+    .ui.selection.dropdown.all_dropdown {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container_all {
+    padding: 0 12px;
+  }
+  .footer_mob_item {
+    display: block;
+  }
+
+  .footer_top_right {
+    grid-template-columns: 1fr;
+  }
+  .copyright_right {
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
+  .logo_text {
+    margin: 16px 0 0;
+    max-width: 242px;
+  }
+  .footer_mob_item {
+    path {
+      fill: #07021B;
+    }
+
+  }
+  .footer_top.container_all {
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    * {
+      color: #07021B;
+    }
+  }
+  footer.container_all {
+    * {
+      color: #07021B;
+    }
+
+    background: #EBEBED;
+  }
+  .copyright {
+    margin-top: 56px;
+  }
+  .footer_top_right .button_header {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+  }
+  .footer_top.container_all {
+    flex-direction: column;
+    padding-top: 80px;
+    padding-bottom: 24px;
+  }
+  .footer_item_office {
+    .footer_link path {
+      fill: #07021B;
+    }
+  }
+
+  .accordion_mob_footer .footer_item_list{
+    display: none;
+    margin-top: 20px;
+    li{
+      margin-bottom: 24px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+    }
+    &.active{
+      display: block;
+
+    }
+  }
+  .accordion_footer {
+    position: relative;
+    width: max-content;
+    padding-right: 20px;
+    &.active{
+      i {
+        transform: rotate(-180deg);
+      }
+    }
+    a{
+      margin-bottom: 0;
+    }
+    i {
+      transition: .5s all;
+      margin: 0;
+      position: absolute;
+      bottom: -4px;
+      right: 0;
+      display: block;
+    }
+  }
+  .footer_top_left {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 56px;
+  }
+  .footer_top_right .text_bold_s {
+    color: #E9484A;
+  }
+  footer.container_all {
+    padding-bottom: 24px;
+    padding-top: 0;
+    grid-gap: 87px;
+  }
+  .footer_mob_item {
+    .footer_item_office {
+      margin-bottom: 0;
+
+      .footer_item_phone {
+        margin-bottom: 0;
+      }
+    }
+
+    margin-bottom: 56px;
+  }
+  .footer_container {
+    grid-template-columns: 1fr;
+    grid-gap: 56px;
+
+    > div:nth-child(1) {
+      grid-row: 3;
+    }
+
+    > div:nth-child(3) {
+      > *:nth-child(2),
+      > *:nth-child(1) {
+        display: none;
+      }
+    }
+
+    > div:nth-child(4) {
+      display: none;
+    }
+
+    .footer_director,
+    .footer_item_phone,
+    .footer_item_office,
+    .city_button_footer {
+      display: none;
+    }
+
+    .footer_item_social {
+      display: block;
+    }
+  }
 }
